Nov 07, 2023
  EFO-CMO loader

Oct 30, 2023
  better parsing for EFO ontology

Oct 23, 2023
  updated CL source to CL release 2023-10-19

Oct 04, 2023
  updated CL source to CL release 2023-09-21

Sep 25, 2023
  removed obsolete code to precompute gviewer data in ONT_TERM_STATS table

Aug 25, 2023
  updated CL source to CL release 2023-08-24

Jul 24, 2023
  updated CL source to CL release 2023-07-20
  EfoLoader: limits input to GWAS records having a single EFO entry
  parser: ignoring lines 'property_value: term_tracker_item ...'
  parser: loading lines 'property_value: IAO:0000028 ...' as synonyms

Jul 05, 2023
  obo validator script: added generation of ofn file (owl functional) in addition to owl file

Jun 23, 2023
  updated CL source to CL release 2023-06-22

May 30, 2023
  OboFileCreator: changed the way dbxrefs in definitions are generated

May 23, 2023
  updated CL source to CL release v2023-05-22

May 22, 2023
  removed from scripts calls to GViewerStatsLoader -- this loader is obsolete and table ONT_TERM_STATS it populates
    is not being used anymore (for quite awhile, already)

May 03, 2023
  implemented FileSystemLock in TermStatsLoader: only one instance of TermStatsLoader could be running in a JVM
  TermStatsLoader: stats computation executes in parallel using no more than specified nr of threads

Apr 25, 2023
  updated CL source to CL release v2023-04-20

Apr 21, 2023
  EfoBulkLoad updated to load HP/MP mappings

Apr 11, 2023
  updated CL source to CL release v2023-03-21
  enhanced parsing of date fields

Apr 06, 2023
  better EFO ontology loading for EFO:BAO terms

Apr 05, 2023
  fixed EFO ontology loading -- was spuriously adding 'EFO:GO:xxxxxxx' terms with 'BP','CC','MF' ont_id

Apr 04, 2023
  fixed generate_obo_file.sh

Mar 17, 2023
  further improvements in loading EFO ontology

Mar 10, 2023
  EFO xrefs loading tune up

Mar 09, 2023
  implemented loading of EFO ontology -- first attempt

Mar 06, 2023